--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
   "sections": {
     "openSource": "Open Source",
     "projects": "Released projects",
+    "smallProjects": "Fun projects",
     "contact": "Contact"
   }
 } 
